<resources>

    <string-array name="colors">
        <item>SELECT COLOR</item>
        <item>BLACK</item>
        <item>GRAY</item>
        <item>WHITE</item>
        <item>RED</item>
        <item>BLUE</item>
        <item>BROWN</item>
        <item>GREEN</item>
        <item>YELLOW</item>
        <item>OTHER</item>
    </string-array>

    <string-array name="size">
        <item>SELECT SIZE</item>
        <item>SMALL</item>
        <item>MEDIUM</item>
        <item>LARGE</item>
    </string-array>

    <string-array name="times">
        <item>SELECT TIME</item>
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
    </string-array>

    <string-array name="period">
        <item>SELECT PERIOD</item>
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string-array name="day">
        <item>SELECT DAY</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>After-Tomorrow</item>
    </string-array>

    <string-array name="duration">
        <item>SELECT DURATION</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
    </string-array>

    <string name="app_name">TorontoParking</string>
    <string name="Title">Toronto Parking Application</string>
    <string name="Subtitle">Simplify Toronto Parking!</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">"Forgot Password"</string>
    <string name="register">"Register"</string>
    <string name="prompt_first">"First Name"</string>
    <string name="prompt_last">"Last Name"</string>
    <string name="prompt_phone">"Phone Number"</string>
    <string name="favorites">"Favorites"</string>
    <string name="Not_Applicable">"N/A"</string>
    <string name="logout">"Logout"</string>
    <string name="recent">"Recently Viewed"</string>
    <string name="reset">"Reset"</string>
    <string name="add_favorite">"Favorite"</string>
    <string name="remove_favorite">"Unfavorite"</string>
    <string name="reserve">"Reserve"</string>
    <string name="vehicle_register">"Vehicle Registration"</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_time">Time</string>
    <string name="additional_information">Additional Information</string>
    <string name="handicap">Handicap</string>
    <string name="duration">Duration</string>
    <string name="period">Period</string>


</resources>